[gd_scene load_steps=6 format=2]

[ext_resource path="res://Interface.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Hilogi71.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 100
outline_size = 5
outline_color = Color( 0.847059, 0.560784, 0.113725, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
outline_color = Color( 0.847059, 0.560784, 0.113725, 1 )
font_data = ExtResource( 2 )

[node name="Interface" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Scrore_Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_right = 100.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="Message_Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -50.0
margin_right = 150.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.847059, 0.560784, 0.113725, 1 )
custom_colors/font_outline_modulate = Color( 0.937255, 0.537255, 0.537255, 1 )
text = "M4C"
align = 1
valign = 1

[node name="Button_Play" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.949
margin_top = -150.636
margin_right = 100.0
margin_bottom = -100.636
custom_fonts/font = SubResource( 3 )
text = "PLAY"

[node name="Message_Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="pressed" from="Button_Play" to="." method="_on_Button_Play_pressed"]
[connection signal="timeout" from="Message_Timer" to="." method="_on_Message_Timer_timeout"]
